# enum-pipeline

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
derive/: Cargo.toml
derive/src/: impls.rs  lib.rs
src/: lib.rs
