[package]
name = "enum_pipeline"
description = "Provides a way to use enums to describe and execute ordered data pipelines."
license = "mit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_pipeline_derive = {path = "derive", version = "0.1.0"}

[workspace]
members = ["derive"]
