[package]
name = "enum_pipeline_derive"
description = "Provides derive macros for enum_pipeline."
license = "mit"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = {version = "1.0.80", features = ["full"]}
